--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "filecabinet",
   "version": "0.1.0",
   "private": true,
-  "main": "/server/index/js",
-  "proxy": "http://localhost:4000",
+  "main": "server/index.js",
+  "proxy": "http://localhost:4444",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,7 +12,7 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.17.1",
     "massive": "^6.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -20,7 +20,8 @@
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.1.2",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
