--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "server/index.js",
-  "proxy": "http://localhost:4000",
+  "proxy": "http://127.0.0.1:4000",
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
