--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "server/index.js",
-  "proxy": "http://127.0.0.1:4000",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aws-sdk": "^2.702.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "date-fns": "^2.14.0",
@@ -22,16 +23,20 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "massive": "^6.4.0",
+    "multer": "^1.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
     "styled-components": "^5.1.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
