--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "main": "server/index.js",
   "proxy": "http://localhost:4000",
+  "nodemonConfig": {
+    "ignore": [
+      "src/*"
+    ]
+  },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
